--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bhmb-ui",
-  "version": "1.0.0",
+  "name": "@bhmb/ui",
+  "version": "1.0.0-a1",
   "description": "A UI extension for the Blockheads Messagebot",
   "main": "bundle.js",
   "module": "src/index.ts",
