--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@bhmb/ui",
-  "version": "1.0.0-a5",
+  "version": "1.0.0-a6",
   "description": "A UI extension for the Blockheads Messagebot",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "build": "rollup --config"
+    "build": "rollup --config",
+    "prepare": "npm run build"
   },
   "keywords": [
     "Blockheads",
@@ -22,5 +23,5 @@
     "rollup-plugin-typescript2": "^0.7.0",
     "tslint": "^5.5.0",
     "typescript": "^2.5.3"
-  }
+  },
 }
