--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bhmb/ui",
-  "version": "1.0.0-a10",
+  "version": "1.0.0",
   "description": "A UI extension for the Blockheads Messagebot",
   "main": "index.js",
   "types": "index.d.ts",
